<resources>
    <string name="app_name">ChatApp</string>
    <string name="notification_channel_id" translatable="false">message_channel</string>
    <string name="notification_title">Сообщения от мессенджера</string>
    <string name="notification">Чат</string>
    <string name="message">sendMessage</string>
    <string name="sending">reading user</string>
    <string name="notification_channel_name">channel_chatapp</string>
    <string name="Password">Password</string>
    <string name="Email">E-mail</string>
    <string name="nav_header_title">Name user email</string>
    <string name="nav_header_subtitle">this@gmail.com</string>
    <string name="action_settings">select user</string>
    <string name="menu_key">genKey</string>
    <string name="menu_phone">phone</string>
    <string name="menu_settings">settings</string>
    <string name="menu_exit">exit</string>
    <string name="menu_mess">message</string>
    <string name="title_activity_nav">navActivity</string>

    <string-array name="arrayname">
        <item>Light</item>
        <item>Dark</item>

    </string-array>
    <string name="preferencename">Theme application</string>
    <string name="preferencenameLogin">Email user</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">sign in</string>
    <string name="create_account">registration</string>
    <string name="user">user</string>


    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_feedback">feedback</string>
    <string name="menu_contacts">Contacts</string>
    <string name="feedback_e_mail">Feedback e-mail</string>
    <string name="feedback">Feedback</string>
    <string name="write_feedback">Write feedback</string>
    <string name="send">Send</string>
    <string name="e_mail">E-mail</string>
    <string name="e_mail_boba">e-mail Boba</string>
    <string name="dismiss">cancel</string>
    <string name="ok">Ok</string>
    <string name="e_mail_username">E-mail (username)</string>
    <string name="profile">Profile</string>
    <string name="replace_master_key">Replace master-key</string>
    <string name="input_message">Input message</string>

</resources>