<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_key"
        android:icon="@drawable/ic_baseline_vpn_key_24"
        android:title="@string/menu_key" />
    <item
        android:id="@+id/phoneFragment"
        android:icon="@drawable/ic_baseline_phone_24"
        android:title="@string/menu_phone" />

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/menu_mess" />

    <item
        android:id="@+id/settingsActivity"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/nav_quit"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/menu_exit" />
</group>
</menu>