<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.login.LoginFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/chat_app"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
       >

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/field_email"
                style="@style/MyEditStyle"
                android:hint="@string/Email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:layout_margin="8dp"
                />

            <EditText
                android:id="@+id/field_password"
                style="@style/MyEditStyle"
                android:hint="@string/Password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:layout_margin="8dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/MyButtonStyle"
                android:text="@string/sign_in"
                app:backgroundTint="@color/colorPrimary"
                android:layout_margin="8dp"
                />

            <Button
                android:id="@+id/email_create_account_button"
                style="@style/MyButtonStyle"
                android:text="@string/create_account"
                app:backgroundTint="@color/colorPrimary"
                android:layout_margin="8dp"/>

        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>